# tectonic

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CARGO_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  RELEASE_PROCESS.md  azure-pipelines.yml  build-docker-image.sh  build.rs  cbindgen.toml  codecov.yml  flake.nix  gen-ninja.py  run-docker-image.sh
cfg_support/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
cfg_support/src/: lib.rs
crates/bridge_core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/bridge_core/src/: lib.rs
crates/bridge_core/support/: support.c  tectonic_bridge_core.h  tectonic_bridge_core_generated.h
crates/bridge_flate/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_flate/include/: tectonic_bridge_flate.h
crates/bridge_flate/src/: lib.rs
crates/bridge_fontconfig/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_fontconfig/src/: font_set.rs  lib.rs  object_set.rs  pat.rs  sys.rs
crates/bridge_freetype2/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_freetype2/src/: lib.rs  sys.rs
crates/bridge_harfbuzz/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_harfbuzz/src/: font_funcs.rs  lib.rs  ot.rs  sys.rs  test_util.rs
crates/bridge_icu/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_icu/src/: converter.rs  lib.rs  sys.rs
crates/bridge_png/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bridge_png/src/: lib.rs
crates/bundles/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bundles/src/: cache.rs  dir.rs  itar.rs  lib.rs  ttb.rs  ttb_fs.rs  ttb_net.rs  ttbv1.rs  ttbv1_fs.rs  ttbv1_net.rs  zip.rs
crates/bundles/tests/: integration.rs
crates/cfg_support/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/cfg_support/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/tests/: fake-biber.bat
crates/dep_support/: CHANGELOG.md  Cargo.toml  README.md
crates/dep_support/src/: lib.rs
crates/docmodel/: CHANGELOG.md  Cargo.toml  README.md
crates/docmodel/src/: document.rs  lib.rs  syntax.rs  workspace.rs
crates/engine_bibtex/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/engine_bibtex/bibtex/: bibtex.c  bibtex_bindings.h
crates/engine_bibtex/src/: auxi.rs  bibs.rs  bst.rs  buffer.rs  char_info.rs  cite.rs  entries.rs  exec.rs  global.rs  hash.rs  history.rs  lib.rs  log.rs  other.rs  peekable.rs  pool.rs  scan.rs  test_utils.rs  xbuf.rs
crates/engine_spx2html/: CHANGELOG.md  Cargo.toml  README.md
crates/engine_spx2html/src/: assets.rs  emission.rs  finalization.rs  font.rs  fontfamily.rs  fontfile.rs  fonts.rs  html.rs  initialization.rs  lib.rs  specials.rs  templating.rs
crates/engine_xdvipdfmx/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/engine_xdvipdfmx/src/: lib.rs
crates/engine_xdvipdfmx/xdvipdfmx/: dvipdfmx.c  xdvipdfmx_bindings.h
crates/engine_xetex/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/engine_xetex/src/: lib.rs  ty.rs
crates/engine_xetex/xetex/: teckit-Common.h  teckit-Engine.cpp  teckit-NormalizationData.c  xetex-XeTeXOTMath.cpp  xetex-constants.h  xetex-engine-interface.c  xetex-errors.c  xetex-ext.c  xetex-ext.h  xetex-ini.c  xetex-io.c  xetex-linebreak.c  xetex-math.c  xetex-output.c  xetex-pagebuilder.c  xetex-pic.c  (+10 more)
crates/errors/: CHANGELOG.md  Cargo.toml
crates/geturl/: CHANGELOG.md  Cargo.toml  README.md
crates/io_base/: CHANGELOG.md  Cargo.toml  README.md
crates/mac_core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/pdf_io/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/status_base/: CHANGELOG.md  Cargo.toml
crates/xdv/: CHANGELOG.md  Cargo.toml
dpx/: Cargo.toml  LICENSE
dpx/src/: dpx_agl.rs  dpx_bmpimage.rs  dpx_cff.rs  dpx_cff_dict.rs  dpx_cid.rs  dpx_cidtype0.rs  dpx_cidtype2.rs  dpx_cmap.rs  dpx_cmap_read.rs  dpx_cmap_write.rs  dpx_cs_type2.rs  dpx_dpxconf.rs  dpx_dpxcrypt.rs  dpx_dpxfile.rs  dpx_dpxutil.rs  dpx_dvi.rs  dpx_dvipdfmx.rs  dpx_epdf.rs  dpx_error.rs  dpx_fontmap.rs  dpx_jp2image.rs  dpx_jpegimage.rs  dpx_mem.rs  dpx_mfileio.rs  dpx_mpost.rs  dpx_numbers.rs  dpx_otl_conf.rs  dpx_otl_opt.rs  dpx_pdfcolor.rs  dpx_pdfdev.rs  dpx_pdfdoc.rs  dpx_pdfdraw.rs  dpx_pdfencoding.rs  dpx_pdfencrypt.rs  dpx_pdffont.rs  dpx_pdfnames.rs  dpx_pdfobj.rs  dpx_pdfparse.rs  dpx_pdfresource.rs  dpx_pdfximage.rs  (+33 more)
emit_stringpool/: Cargo.toml
emit_stringpool/src/: lib.rs
emit_tex_constants/: Cargo.toml
emit_tex_constants/src/: lib.rs
engine/: Cargo.toml  Compiler.h  Engine.cpp  Prefix_Mac.h  XeTeXFontInst.cpp  XeTeXFontMgr.cpp  XeTeXFontMgr.h  XeTeXFontMgr_FC.cpp  XeTeXLayoutInterface.cpp  XeTeX_ext.c  build.rs  cpascal.h  etex_version.h  gftodmem.h  help.h  lib.h  numbers.h  openclose.c  pdfimage.cpp  printversion.c  synctex-xetex.h  synctex.c  synctex.h  texmfmp.c  texmfmp.h  tidy_kpathutil.c  uexit.c  ulong_chartraits.h  usage.c  w2c-config.h  xetex0.c  xetexcoerce.h  xetexd.h  xetexextra.h  xetexini.c
engine/src/: bibtex.rs  core_bridge.rs  core_memory.rs  dpx_agl.rs  dpx_bmpimage.rs  dpx_cff.rs  dpx_cff_dict.rs  dpx_cid.rs  dpx_cidtype0.rs  dpx_cidtype2.rs  dpx_cmap.rs  dpx_cmap_read.rs  dpx_cmap_write.rs  dpx_cs_type2.rs  dpx_dpxconf.rs  dpx_dpxcrypt.rs  dpx_dpxfile.rs  dpx_dpxutil.rs  dpx_dvi.rs  dpx_dvipdfmx.rs  dpx_epdf.rs  dpx_error.rs  dpx_fontmap.rs  dpx_jp2image.rs  dpx_jpegimage.rs  dpx_mem.rs  dpx_mfileio.rs  dpx_mpost.rs  dpx_numbers.rs  dpx_otl_conf.rs  dpx_otl_opt.rs  dpx_pdfcolor.rs  dpx_pdfdev.rs  dpx_pdfdoc.rs  dpx_pdfdraw.rs  dpx_pdfencoding.rs  dpx_pdfencrypt.rs  dpx_pdffont.rs  dpx_pdfnames.rs  dpx_pdfobj.rs  (+59 more)
engine/tectonic/: core-bridge.h  core-memory.h  stub_errno.c  stub_icu.c  xetex-XeTeXFontInst.h  xetex-XeTeXFontInst_Mac.cpp  xetex-XeTeXLayoutInterface.cpp  xetex-constants.h  xetex-ext.c  xetex-ext.h  xetex-io.c  xetex-macos.c  xetex-xetexd.h
xdv/: CHANGELOG.md  Cargo.toml
xdv/examples/: xdvdump.rs
xdv/src/: lib.rs
(+1268 files in other folders)
