[workspace]
members = ["crates/*"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(backtrace)'] }

# Includes both dev and dist dependencies
[workspace.dependencies]
byte-unit = "^5.0"
cfg-if = "1.0"
error-chain = "^0.12"
flate2 = { version = "^1.0.19", default-features = false, features = ["zlib"] }
fs2 = "^0.4"
lazy_static = "^1.4"
libc = "^0.2"
md-5 = "^0.10"
open = "^5.0"
quick-xml = "^0.31"
serde = { version = "^1.0", features = ["derive"] }
sha2 = "^0.10"
clap = { version = "4.5.1", features = ["derive"] }
tectonic_bridge_core = { path = "crates/bridge_core", version = "0.0.0-dev.0" }
tectonic_bundles = { path = "crates/bundles", version = "0.0.0-dev.0", default-features = false }
tectonic_docmodel = { path = "crates/docmodel", version = "0.0.0-dev.0" }
tectonic_engine_bibtex = { path = "crates/engine_bibtex", version = "0.0.0-dev.0" }
tectonic_engine_spx2html = { path = "crates/engine_spx2html", version = "0.0.0-dev.0" }
tectonic_engine_xdvipdfmx = { path = "crates/engine_xdvipdfmx", version = "0.0.0-dev.0" }
tectonic_engine_xetex = { path = "crates/engine_xetex", version = "0.0.0-dev.0" }
tectonic_errors = { path = "crates/errors", version = "0.0.0-dev.0" }
tectonic_geturl = { path = "crates/geturl", version = "0.0.0-dev.0", default-features = false }
tectonic_io_base = { path = "crates/io_base", version = "0.0.0-dev.0" }
tectonic_status_base = { path = "crates/status_base", version = "0.0.0-dev.0" }
tectonic_xdv = { path = "crates/xdv", version = "0.0.0-dev.0" }
tectonic_xetex_layout = { path = "crates/xetex_layout", version = "0.0.0-dev.0" }
tempfile = "^3.1"
termcolor = "^1.1"
tokio = "^1.0"
toml = { version = "^0.8" }
url = "^2.0"
watchexec = "^3.0"
watchexec-filterer-globset = "3.0"
watchexec-signals = "2.0"
watchexec-supervisor = "1.0"
zip = { version = "^0.6", default-features = false, features = ["deflate"] }
time = "0.3.36"
clap_complete = "4.5.1"
walkdir = "2"
regex = "1.10.2"
anyhow = "1.0.80"
tar = "0.4.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[workspace.dev-dependencies]
filetime = "^0.2"
futures = "0.3"
headers = "0.4"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
tempfile = "^3.1"
