[package]
name = "tectonic_cfg_support"
version = "0.0.1"
authors = [ "Matt Rice <ratmice@gmail.com>" ]
description = """
A build.rs support crate that helps deal with CARGO_CFG_TARGET_* variables.
When cross-compiling, build.rs is built for and runs on the HOST,
as such cfg!(target_arch = ...) will actually check the HOST, rather than the TARGET.

This crate adds a small wrapper around the cargo environment variables set for the actual target.
For use in replacing cfg! checks.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"
