# Copyright 2018 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_engine"
version = "0.0.1-dev"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Core layout engine of XeTeX and Tectonic.
"""
build = "build.rs"
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[build-dependencies]
cc = "^1.0"
pkg-config = "^0.3"  # note: sync dist/docker/*/pkg-config-rs.sh with the version in Cargo.lock
regex = "^1.1"
sha2 = "^0.8"
vcpkg = "0.2.7"

[dependencies]
bitflags = "1.1.0"
datetime = "0.4"
libc = "0.2"
libpng-sys = "1"
libz-sys = { version = "1", optional = true}
#log = { version = "0.4", features = ["std"] }

[features]
default = ['libz-sys']
legacy-libz = ['libz-sys']
