# Copyright 2018 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_engine"
version = "0.0.1-dev"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Core layout engine of XeTeX and Tectonic.
"""
build = "build.rs"
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[build-dependencies]
cc = "^1.0"
pkg-config = "^0.3"  # note: sync dist/docker/*/pkg-config-rs.sh with the version in Cargo.lock
regex = "^1.3"
sha2 = "^0.8"
vcpkg = "0.2.7"

[dependencies]
tectonic_bridge = { version = "0.0.1-dev", path = "../bridge" }
tectonic_dvipdfmx = { version = "0.0.1-dev", path = "../dpx" }
bitflags = "1.1.0"
datetime = "0.4"
libc = "0.2"
#log = { version = "0.4", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.4"
core-graphics = "0.17.3"
core-text = "13.3.0"
freetype-rs = "0.22.0"
# needed for replacing XeTeXFontMgr_Mac
# cocoa = "0.19.0"
