lints.workspace = true

[package]
name = "tectonic_bridge_fontconfig"
version = "0.0.0-dev.0"
edition = "2021"
links = "fontconfig"
description = """
Exposing fontconfig APIs to the Tectonic C/C++ and Rust code.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bridge_fontconfig"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"

[dependencies]
libc = "0.2"
tectonic_bridge_png = { path = "../bridge_png", version = "0.0.0-dev.0" }

[build-dependencies]
tectonic_dep_support = { path = "../dep_support", version = "0.0.0-dev.0" }

[package.metadata.internal_dep_versions]
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
tectonic_bridge_png = "866856eb2cb26ac8c534648bfbd3b0ee88e74d69"
