# Copyright 2020-2021 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

[package]
name = "tectonic_bridge_harfbuzz"
version = "0.2.2"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Expose the Harfbuzz C/C++ APIs to Rust/Cargo.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bridge_harfbuzz"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "harfbuzz"
exclude = ["/harfbuzz/docs/", "/harfbuzz/perf/", "/harfbuzz/test/"]

[dependencies]
tectonic_bridge_graphite2 = { path = "../bridge_graphite2", version =">=0.2.0,<1"}
tectonic_bridge_icu = { path = "../bridge_icu", version =">=0.2.0,<1"}

[build-dependencies]
cc = "^1.0.66"
tectonic_dep_support = { path = "../dep_support", version =">=0.1.0,<1"}

[features]
external-harfbuzz = []

[package.metadata.internal_dep_versions]
tectonic_bridge_graphite2 = "2c1ffcd702a662c003bd3d7d0ca4d169784cb6ad"
tectonic_bridge_icu = "2c1ffcd702a662c003bd3d7d0ca4d169784cb6ad"
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
