# Copyright 2020-2023 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

[package]
name = "tectonic_bridge_harfbuzz"
version = "0.0.0-dev.0" # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Expose the Harfbuzz C/C++ APIs to Rust/Cargo.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bridge_harfbuzz"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "harfbuzz"
exclude = ["/harfbuzz/docs/", "/harfbuzz/perf/", "/harfbuzz/test/"]

[dependencies]
tectonic_bridge_graphite2 = { path = "../bridge_graphite2", version = "0.0.0-dev.0" }
libc = "0.2"

[build-dependencies]
cc = "^1.0.66"
tectonic_dep_support = { path = "../dep_support", version = "0.0.0-dev.0" }

[features]
external-harfbuzz = []

[package.metadata.internal_dep_versions]
tectonic_bridge_graphite2 = "2722731f9e32c6963fe8c8566a201b33672c5c5a"
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
