# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

[package]
name = "tectonic_bridge_icu"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Expose a subset of the ICU Unicode APIs to Rust/Cargo.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bridge_icu"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "icuuc"

[dependencies]
libc = "0.2"
paste = "1.0"

[build-dependencies]
tectonic_dep_support = { path = "../dep_support", version = "0.0.0-dev.0" }

[package.metadata.internal_dep_versions]
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
