lints.workspace = true

[package]
name = "tectonic_bridge_png"
license = "MIT"
version = "0.0.0-dev.0"
edition = "2021"
links = "png"
description = """
Exposing PNG APIs to the Tectonic C/C++ and Rust code.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bridge_png"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"

[build-dependencies]
tectonic_dep_support = { path = "../dep_support", version = "0.0.0-dev.0" }

[package.metadata.internal_dep_versions]
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
