# Copyright 2020-2021 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

lints.workspace = true

[package]
name = "tectonic_bundles"
version = "0.0.0-dev.0" # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Tectonic "bundle" (support file collection) implementations.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_bundles"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
flate2 = { version = "^1.0.19", default-features = false, features = ["zlib"] }
tectonic_errors = { path = "../errors", version = "0.0.0-dev.0" }
tectonic_geturl = { path = "../geturl", version = "0.0.0-dev.0", default-features = false }
tectonic_io_base = { path = "../io_base", version = "0.0.0-dev.0" }
tectonic_status_base = { path = "../status_base", version = "0.0.0-dev.0" }
zip = { version = "4", default-features = false, features = ["deflate"] }
url = "^2.0"

[features]
default = ["geturl-reqwest"]
geturl-curl = ["tectonic_geturl/curl"]
geturl-reqwest = ["tectonic_geturl/reqwest"]
native-tls-vendored = ["tectonic_geturl/native-tls-vendored"]

[package.metadata.internal_dep_versions]
tectonic_errors = "5c9ba661edf5ef669f24f9904f99cca369d999e7"
tectonic_geturl = "68c5fc525c5fead75913bd90380043761bde9f61"
tectonic_io_base = "thiscommit:2021-06-13:s9130zU"
tectonic_status_base = "317ae79ceaa2593fb56090e37bf1f5cc24213dd9"
