# Copyright 2019-2020 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_cfg_support"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = [
    "Matt Rice <ratmice@gmail.com>",
    "Peter Williams <peter@newton.cx>"
]
description = """
A build.rs support crate that helps deal with CARGO_CFG_TARGET_* variables.
When cross-compiling, these variables must be used instead of constructs such
as `cfg!(target_arch = ...)` because the build.rs script is compiled to
target the build host environment, not the true target environment.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "^1.4"
